# adk-scope

./: .gitignore  BUILD  README.md  config.yaml  extract.sh  extract_python.sh  extract_typescript.sh  gemini.md  match.sh  playground.ipynb  proto2py.sh  pyproject.toml  report.sh  requirements.txt  run.sh
.agent/workflows/: run_tests.md
.github/workflows/: ci.yml
proto/: features.proto
src/google/adk/scope/: features_pb2.py  types.py
src/google/adk/scope/extractors/: __init__.py  converter_go.py  converter_java.py  converter_py.py  converter_ts.py  extract.py  extractor_go.py  extractor_java.py  extractor_py.py  extractor_ts.py
src/google/adk/scope/extractors/python/: converter.py  extractor.py
src/google/adk/scope/matcher/: matcher.py
src/google/adk/scope/reporter/: reporter.py
src/google/adk/scope/utils/: __init__.py  args.py  normalizer.py  similarity.py  stats.py  strings.py
test/: test_types.py
test/adk/scope/extractors/: test_converter_go.py  test_converter_java.py  test_converter_py.py  test_converter_ts.py  test_extract.py  test_extractor_go.py  test_extractor_java.py  test_extractor_py.py  test_extractor_ts.py
test/adk/scope/extractors/python/: test_converter.py  test_extractor.py
test/adk/scope/extractors/typescript/: test_converter.py  test_extractor.py
test/adk/scope/matcher/: test_matcher.py
test/adk/scope/reporter/: test_reporter.py
test/adk/scope/utils/: test_args.py  test_normalizer.py  test_similarity.py  test_stats.py  test_strings.py
test/google/adk/scope/utils/: test_args.py
(+2 files in other folders)
